# stefn

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  release.sh
.github/workflows/: ci.yml
migrations/: initial.sql
migrations/principal/: 1_initial.sql
migrations/sessions/: 1_initial.sql
src/: broker.rs  config.rs  database.rs  errors.rs  http.rs  lib.rs  mailing.rs  models.rs  sessions.rs  state.rs  utils.rs
src/auth/: basic.rs  mod.rs  models.rs
src/auth/basic/: email_validation.rs  infrastructure.rs  infrastructures.rs  middlewares.rs  mod.rs  routes.rs  services.rs
src/auth/google/: infrastructure.rs  mod.rs  oauth.rs  routes.rs  service.rs
src/auth/jwt/: dtos.rs  middlewares.rs  mod.rs  services.rs
src/database/: database.rs  manager.rs  mod.rs  service.rs
src/orquestrator/: mod.rs  model.rs  orquestrator.rs  service.rs  tracing.rs
src/payments/: config.rs  services.rs
src/server/: auth.rs  config.rs  responses.rs  router.rs  state.rs
src/service/: config.rs  metrics.rs  mod.rs  model.rs  responses.rs  router.rs  service.rs  services.rs  state.rs  tests.rs  versioning.rs
src/service/auth/: basic.rs  jwt.rs  mod.rs
src/website/: admin.rs  forms.rs  html.rs  locale.rs  meta_tags.rs  mod.rs  seo.rs  views.rs
stefn-macros/: Cargo.toml
stefn-macros/src/: lib.rs
templates/admin/: create.html  form.html  list.html
templates/auth/: ingress.html
templates/base/: base.html  scripts.html
tests/: test_auth_basic.rs  test_forms.rs  test_macros.rs
