[package]
name = "stefn"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/lucas-montes/stefn"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
description = "An opinionated and blazingly fast meta framework"

[dependencies]
stefn-macros = { path = "./stefn-macros" }

tokio = { version = "1.38.0", features = ["full"] }

axum = { version = "0.7.5", features = ["multipart", "json", "query", "http2", "macros", "tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }

utoipa = { version = "=5.0.0", features = ["axum_extras", "chrono", "decimal"] }

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "tls-rustls", "chrono", "uuid"]}

jsonwebtoken = "9"
argon2 = "0.5.3"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
oauth2 = "4.4.1"
reqwest = { version = "0.12", features = ["json"] }
maxminddb = "0.24.0"
menva = { version = "1.1.0", path = "../../menva" }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v7", "fast-rng", "serde"] }
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }

[dependencies.cookie]
version = "0.18"
features = ["secure", "percent-encode"]

[profile.release]
opt-level = "z"  # Use the highest optimization level for production builds
lto = true       # Enable Link Time Optimization for better performance
panic = "abort"  # Abort on panic to prevent unwinding overhead
debug = false    # Disable debug symbols to reduce binary size
strip = "symbols"


[profile.dev]
debug = true     # Enable debug symbols for development builds
