[package]
name = "stefn"
version = "0.4.1"
repository = "https://github.com/lucas-montes/stefn"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
description = "An opinionated and blazingly fast meta framework"

license.workspace = true
edition.workspace = true

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
mockito = "1.6.1"

[features]
multipart = ["reqwest/multipart"]
charset = ["reqwest/charset"]
http2 = ["reqwest/http2"]
rustls-tls = ["reqwest/rustls-tls"]
stream = ["reqwest/stream"]
cookies = ["reqwest/cookies"]

[dependencies]
stefn-macros = { path = "./stefn-macros", version = "0.1.0" }

tokio = { version = "1.38.0", features = ["full"] }

http = "1.2.0"
axum = { version = "0.8.1", features = ["multipart", "json", "query", "http2", "macros", "tracing", "ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = "0.1.10"
bytes = "1.10.0"

serde_urlencoded = "0.7"

utoipa = { version = "5.3.0", features = ["axum_extras", "chrono", "decimal"] }
jsonwebtoken = "9"

askama = "0.12.1"
validator = { version = "0.19", features = ["derive"] }

sentry = "0.36.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

metrics = { version = "0.23", default-features = false }
metrics-exporter-prometheus = { version = "0.15", default-features = false }

chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-rustls", "chrono", "uuid", "postgres"]}


argon2 = "0.5.3"
hmac = "0.12.1"
sha2 = "0.10.8"
oauth2 = "4.4.1"

hex = "0.4.3"

reqwest = { version = "0.12", features = ["json"] }

maxminddb = "0.24.0"

menva = "1.1.0"

futures = "0.3.31"

uuid = { version = "1.11.0", features = ["v7", "fast-rng", "serde"] }

lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }

async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper-rustls"] }

http-body-util = "0.1.0"

unicode-normalization = "0.1.24"

regex = "1.11.1"

[dependencies.cookie]
version = "0.18"
features = ["secure", "percent-encode"]

[profile.release]
opt-level = "z"  # Use the highest optimization level for production builds
lto = true       # Enable Link Time Optimization for better performance
panic = "abort"  # Abort on panic to prevent unwinding overhead
debug = false    # Disable debug symbols to reduce binary size
strip = "symbols"


[profile.dev]
debug = true     # Enable debug symbols for development builds
